# claude-tools

./: Cargo.toml  README.md  install.sh  new-features.md
.github/workflows/: ci.yml  release.yml
crates/agent-cli/src/: main.rs
crates/agent-comms/: Cargo.toml
crates/agent-comms/src/: config.rs  gateway.rs
crates/agent-core/src/: storage.rs
crates/agent-mcp/: Cargo.toml
crates/agent-mcp/src/: main.rs  server.rs
crates/agent-sync/: Cargo.toml
crates/agent-sync/src/: client.rs  lib.rs  main.rs
crates/agent-updater/: build.rs
crates/agent-updater/src/: lib.rs
crates/claude-cli/: build.rs
crates/claude-cli/src/: main.rs
crates/claude-fs/src/: list.rs  ops.rs  tree.rs
crates/claude-mcp/: Cargo.toml
crates/claude-mcp/src/: main.rs  protocol.rs  tools.rs  updater.rs
crates/claude-search/src/: indexer.rs  query.rs
crates/claude-symbols/src/: extractor.rs  index.rs  languages.rs  parser.rs
