[workspace]
members = [
    "crates/claude-core",
    "crates/claude-fs",
    "crates/claude-symbols",
    "crates/claude-search",
    "crates/claude-cli",
    "crates/claude-mcp",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
walkdir = "2"
ignore = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
blake3 = "1"
tree-sitter = "0.24"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
semver = "1"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
lto = true
strip = true
