[workspace]
members = [
    "crates/agent-core",
    "crates/agent-fs",
    "crates/agent-symbols",
    "crates/agent-search",
    "crates/agent-cli",
    "crates/agent-mcp",
    "crates/agent-comms",
    "crates/agent-updater",
    "crates/agent-sync",
]
resolver = "2"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
walkdir = "2"
ignore = "0.4"
rusqlite = { version = "0.39", features = ["bundled"] }
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
blake3 = "1"
tree-sitter = "0.24"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
semver = "1"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
rmcp = { version = "1.3", features = ["server", "transport-io", "macros"] }
schemars = "1"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rpassword = "7"

[profile.release]
lto = true
strip = true
