[package]
name = "agent-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agent-tools-mcp"
path = "src/main.rs"

[dependencies]
agent-core = { path = "../agent-core" }
agent-fs = { path = "../agent-fs" }
agent-symbols = { path = "../agent-symbols" }
agent-search = { path = "../agent-search" }
agent-comms = { path = "../agent-comms" }
agent-sync = { path = "../agent-sync" }
agent-updater = { path = "../agent-updater" }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
schemars = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
rpassword = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
walkdir = { workspace = true }
