[package]
name = "agent-sync"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent_sync"
path = "src/lib.rs"

[[bin]]
name = "agent-sync"
path = "src/main.rs"

[dependencies]
agent-comms = { path = "../agent-comms" }
agent-updater = { path = "../agent-updater" }
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
walkdir = { workspace = true }
zip = { workspace = true }
tokio = { workspace = true }
