[package]
name = "claude-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claude-tools-mcp"
path = "src/main.rs"

[dependencies]
claude-core = { path = "../claude-core" }
claude-fs = { path = "../claude-fs" }
claude-symbols = { path = "../claude-symbols" }
claude-search = { path = "../claude-search" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
semver = { workspace = true }

[target.'cfg(unix)'.dependencies]
flate2 = { workspace = true }
tar = { workspace = true }

[target.'cfg(windows)'.dependencies]
zip = { workspace = true }
